2010-11-11  Brian Weinstein  <bweinstein@apple.com>

        Windows Build Fix. Change #imports to #includes.

        * UIProcess/win/WebInspectorProxyWin.cpp:

2010-11-08  Timothy Hatcher  <timothy@apple.com>

        Create and load the Web Inspector page.

        https://webkit.org/b/49207

        Reviewed by Anders Carlsson.

        * UIProcess/WebInspectorProxy.cpp:
        (WebKit::WebInspectorProxy::createInspectorPage): Added. Call platformCreateInspectorPage and then
        call WebPageProxy::loadURL with inspectorPageURL.
        (WebKit::WebInspectorProxy::didLoadInspectorPage): Added stub.
        * UIProcess/WebInspectorProxy.h:
        * UIProcess/WebInspectorProxy.messages.in: Added.
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didReceiveMessage): Call WebInspectorProxy::didReceiveWebInspectorProxyMessage.
        (WebKit::WebPageProxy::didReceiveSyncMessage): Call WebInspectorProxy::didReceiveSyncWebInspectorProxyMessage.
        * UIProcess/WebPageProxy.h: Made creationParameters public so WebInspectorProxy can use it.

        * UIProcess/mac/WebInspectorProxyMac.mm:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Make a WkView and return the WebPageProxy.
        (WebKit::WebInspectorProxy::inspectorPageURL): Return the file URL for the inspector.html file.
        * UIProcess/qt/WebInspectorProxyQt.cpp:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Added stub.
        (WebKit::WebInspectorProxy::inspectorPageURL): Ditto.
        * UIProcess/win/WebInspectorProxyWin.cpp:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Added stub.
        (WebKit::WebInspectorProxy::inspectorPageURL): Ditto.

        * WebProcess/WebCoreSupport/WebInspectorClient.cpp:
        (WebKit::WebInspectorClient::openInspectorFrontend): Call WebInspector::createInspectorPage and set up the WebInspectorFrontendClient.